# SITH_Layer

./: DeepSITH_testing.ipynb  DeepiSITH_testing.ipynb  README.md  Simple_Network_example.ipynb  Sith_Layer_Verification.ipynb  deep_isith.py  iSITH_verifications.ipynb  isith.py  laplace.py  plagueis.txt  setup.cfg  setup.py  sith.py
notebooks/: DeepSITH_testing.ipynb  DeepiSITH_testing.ipynb  Simple_Network_example.ipynb  Sith_Layer_Verification.ipynb  iSITH_verifications.ipynb
sith/: __init__.py  deep_isith.py  laplace.py  sith.py
