[metadata]
author = Beeg Jacques
author_email = beegjacques@yahoo.com
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
description = This repo contains code for the Scale Invariant Temporal History (SITH) module for use with PyTorch. It is build on a Laplace module that performs the Laplace transform of a temporal series.
license_file = LICENSE
project_urls =
    GitHub = https://github.com/compmem/SITH_Layer
url = https://github.com/compmem/SITH_Layer

[options]
python_requires = >= 3.7
install_requires =
    attrs
    jinja2
    matplotlib >= 2.2.0
    packaging
    pandas
    scipy
    seaborn
    torch

packages = find:

[options.packages.find]
exclude =
    *.tests
